# bc-za

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: django.yml
bc_za/: manage.py
bc_za/bc_za/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
bc_za/bc_za/tests/: __init__.py  base.py  test_accounts.py
bc_za/events/: admin.py  models.py  urls.py  views.py
bc_za/events/migrations/: 0001_initial.py
bc_za/events/templates/events/: detail.html  index.html
bc_za/templates/: base.html
bc_za/templates/registration/: login.html
