[project]
requires-python = ">=3.12"
dependencies = [
  "Django"
]

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = [
  "D102",
  "D103",
]
exclude = [
  ".git", # speed up
  "tests", # pytest patterns
  "ligapp/tests/*", # pytest patterns
  "__pycache__", # speed up
]
max-complexity = 10

[tool.flake8.known-modules]
Django = ["django"]

[tool.pytest]
DJANGO_SETTINGS_MODULE = "bc_za.test_settings"
python_files = ["tests.py", "test_*.py"]

[tool.isort]
profile = "black"
