[project]
requires-python = ">=3.12"
dependencies = [
  "Django"
]

[tool.pytest]
DJANGO_SETTINGS_MODULE = "bc_za.test_settings"
python_files = ["tests.py", "test_*.py"]

[tool.ruff]
line-length=120

[tool.ruff.lint]
select = ["E", 'F', 'I', 'B', 'A', 'T10', "T20", "TD", 'ERA', "SIM", "C901", "DJ"]
mccabe.max-complexity = 10

[tool.ruff.lint.isort]
lines-after-imports = 2
known-third-party = ["django"]
